# learning_fastapi

./: .gitignore  pyproject.toml
src/learning_fastapi/: main.py
