[project]
name = "learning-fastapi"
version = "0.1.0"
description = ""
authors = [
    {name = "Jorge Cabrera",email = "jorge.cgc0@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests (>=2.32.5,<3.0.0)"
]

[tool.poetry]
packages = [{include = "learning_fastapi", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
